# embedding_service

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  problem_statement.md
src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
tests/: e2e_tests.rs  integration_tests.rs
tests/common/: mock_model.rs  mod.rs
