[package]
name = "embedding_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "embedding_service"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
model2vec-rs = "0.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
axum = "0.8.7"
# Security
subtle = "2.5"

[dev-dependencies]
axum-test = "18.4.1"
tokio-test = "0.4"
tower = "0.5.2"
reqwest = { version = "0.12", features = ["json"] }
mockall = "0.12"
serial_test = "3.0"
